--- a/practica 2/css/main.css
+++ b/practica 2/css/main.css
@@ -78,4 +78,14 @@ header, h1 {
 .item img {
   max-width: 100%;
   height: auto;
-}/*# sourceMappingURL=main.css.map */
+}
+ @media (max-width: 768px) {
+        #content {
+            flex-direction: column;
+            align-items: center;
+        }
+        .showCard {
+            width: 90%;
+        }
+    }
+/*# sourceMappingURL=main.css.map */
